Update memory game layout and add a calculation game.
Centered the memory game grid vertically and made it fully responsive by adapting to window dimensions. Added a new calculation game with random equations, multiple-choice questions, and responsive design features to enhance the user experience.

--- a/games/memory_tiles.html
+++ b/games/memory_tiles.html
@@ -94,7 +94,7 @@
 
             // Generate grid of tiles
             const offsetX = (this.sys.game.config.width - this.tileSize * level.gridSize) / 2;
-            const offsetY = (this.sys.game.config.height - this.tileSize * level.gridSize);
+            const offsetY = (this.sys.game.config.height - this.tileSize * level.gridSize) / 2;
 
             for (let row = 0; row < level.gridSize; row++) {
                 for (let col = 0; col < level.gridSize; col++) {
@@ -297,8 +297,8 @@
 
     const config = {
         type: Phaser.AUTO,
-        width: 800,
-        height: 800,
+        width: window.innerWidth,
+        height: window.innerHeight,
         parent: 'game-container',
         scene: MemoryGame,
         backgroundColor: '#000000',
